--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>www.beautician.com</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.css">
     <!-- this is Start font link -->
-    <script src="http://kit.fontawesome.com/55922b8b80.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
+    <!-- this is End font link -->
+    <script src="http://kit.fontawesome.com/55922b8b80.js" crossorigin="anonymous"></script>
 </head>
-<!-- this is End font link -->
 
 <body>
     <div class="main" id="home">
